--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "react-router": "2.0.0",
-    "react-color": "2.0.0"
+    "react-color": "2.0.0",
+    "velocity-react": "1.1.4"
   }
 }
