--- a/package.json
+++ b/package.json
@@ -41,17 +41,16 @@
     "news"
   ],
   "dependencies": {
-    "antd": "0.12.8",
-    "classnames": "2.2.3",
+    "antd": "^1.3.0",
+    "classnames": "^2.2.5",
     "echarts": "3.1.3",
     "extract-text-webpack-plugin": "1.0.1",
-    "jquery": "2.2.1",
+    "jquery": "^2.2.4",
     "particles.js": "2.0.0",
     "path": "0.12.7",
-    "react": "0.14.7",
-    "react-dom": "0.14.7",
-    "react-router": "2.0.0",
-    "react-color": "2.0.0",
+    "rc-queue-anim": "^0.11.9",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "velocity-react": "1.1.4"
   }
 }
