--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass-loader": "3.1.2",
     "style-loader": "0.13.0",
     "url-loader": "0.5.7",
+    "json-loader": "0.5.4",
     "webpack": "^1.13.2",
     "webpack-dev-server": "1.14.1"
   },
